--- a/src/components/Maps/style.module.less
+++ b/src/components/Maps/style.module.less
@@ -283,7 +283,7 @@ h3 {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  height: 6rem;
+  height: 5rem;
 
   @media (max-width: @breakPointM) {
     height: auto;
@@ -292,7 +292,7 @@ h3 {
 }
 
 .filterSection {
-  margin-right: 2rem;
+  margin-right: 1.5rem;
   min-width: 10rem;
 
   @media (max-width: @breakPointM) {
@@ -300,13 +300,14 @@ h3 {
   }
 }
 
+.inlineCheckbox {
+  margin-right: 1.5rem;
+  margin-top: 0.4rem;
+  align-items: stretch;
+}
+
 .dropdownButton {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  width: 10rem;
-  margin-top: 0.2rem;
-  height: auto;
+  margin-top: -0.1rem;
 }
 
 .dropdownContent {
@@ -335,34 +336,5 @@ h3 {
       height: 1.8rem;
       margin: 0.4rem;
     }
-  }
-}
-
-.triangle {
-  width: 0;
-  height: 0;
-  border-top: 8.6px solid transparent;
-  border-left: 10px solid #3e3e3e;
-  border-bottom: 8.6px solid transparent;
-  animation-name: rotateTriangle;
-  background: none;
-  // for some reason, this is neccessary for the triangle to show up in Safari
-  transform: rotate(0deg);
-
-  &:hover {
-    background: none;
-  }
-}
-
-.animateTriangle {
-  transform: rotate(90deg);
-}
-
-@keyframes rotateTriangle {
-  0% {
-    transform: rotate(0deg);
-  }
-  100% {
-    transform: rotate(90deg);
   }
 }
