Margin and import fixes

--- a/src/components/Maps/style.module.less
+++ b/src/components/Maps/style.module.less
@@ -302,12 +302,15 @@ h3 {
 
 .inlineCheckbox {
   margin-right: 1.5rem;
-  margin-top: 0.4rem;
   align-items: stretch;
 }
 
+.inlineCheckboxLabel {
+  margin-top: 0.4rem;
+}
+
 .dropdownButton {
-  margin-top: -0.1rem;
+  margin-top: -0.3rem;
 }
 
 .dropdownContent {
