- Created mixins for color schemes - Started using the mixins for sections, profile tile and other components
Co-authored-by: Valentin Schagerl <Vali_Schagerl@web.de>

--- a/src/components/TickerToSignup/SignupButtonAndTile/style.module.less
+++ b/src/components/TickerToSignup/SignupButtonAndTile/style.module.less
@@ -1,4 +1,5 @@
-@import '../../../components/style/vars.less';
+@import '../../style/vars.less';
+@import '../../style/colorSchemes.module.less';
 
 .signUpCTA {
   font-size: @DesktopFontSizeM;
@@ -18,6 +19,8 @@
   margin-top: 2rem;
   padding: 3rem;
 
+  .colorSchemeWhite;
+
   p {
     font-size: @DesktopFontSizeM;
     @media (max-width: @breakPointM) {
@@ -28,24 +31,5 @@
       font-size: @MobileFontSizeM;
       line-height: 1.625rem;
     }
-  }
-}
-
-&.sectionWhite {
-  background-color: @white;
-  color: @black;
-  --bg-color: @white;
-  --font-color: @black;
-  --secondary-color: @violet;
-  --text-on-secondary-color: @white;
-  --button-font-color: @violet;
-  --button-bg-color: @violetTransparent;
-
-  h1,
-  h2,
-  h3 {
-    // Note: is that ok ?
-    // color: @violet;
-    color: var(--secondary-color);
   }
 }
