- Removed heading styling that is now unneccessary - Found new color scheme solution for Finally Message
Co-authored-by: Valentin Schagerl <Vali_Schagerl@web.de>

--- a/src/components/Layout/Sections/style.module.less
+++ b/src/components/Layout/Sections/style.module.less
@@ -9,6 +9,12 @@
   // Set white color scheme as default for sections
   .colorSchemeWhite;
 
+  h1,
+  h2,
+  h3 {
+    color: var(--heading-color);
+  }
+
   @media (max-width: @breakPointM) {
     padding: 3rem 2rem 3rem 2rem;
   }
