--- a/src/components/style/colorSchemes.module.less
+++ b/src/components/style/colorSchemes.module.less
@@ -6,6 +6,7 @@
   color: @black;
   --bg-color: @white;
   --font-color: @black;
+  --heading-color: @violet;
   --secondary-color: @violet;
   --text-on-secondary-color: @white;
   --button-font-color: @violet;
@@ -13,12 +14,6 @@
   --button-bg-color: @violetTransparent;
   --button-hover-bg-color: @violet;
   --button-hover-font-color: @white;
-
-  h1,
-  h2,
-  h3 {
-    color: @violet;
-  }
 }
 
 .colorSchemeViolet {
@@ -26,6 +21,7 @@
   color: @white;
   --bg-color: @violet;
   --font-color: @white;
+  --heading-color: @white;
   --secondary-color: @white;
   --text-on-secondary-color: @black;
   --button-font-color: @white;
@@ -33,11 +29,6 @@
   --button-bg-color: @whiteTransparent;
   --button-hover-bg-color: @white;
   --button-hover-font-color: @violet;
-  h1,
-  h2,
-  h3 {
-    color: @white;
-  }
 }
 
 .colorSchemeAqua {
@@ -45,6 +36,7 @@
   color: @white;
   --bg-color: @aqua;
   --font-color: @white;
+  --heading-color: @white;
   --secondary-color: @white;
   --text-on-secondary-color: @black;
   --button-font-color: @white;
@@ -59,6 +51,7 @@
   color: @white;
   --bg-color: @red;
   --font-color: @white;
+  --heading-color: @white;
   --secondary-color: @white;
   --text-on-secondary-color: @black;
   --button-font-color: @white;
