Fixed Colours of sign up and checkboxes

--- a/src/components/Forms/TextInput/style.module.less
+++ b/src/components/Forms/TextInput/style.module.less
@@ -6,7 +6,7 @@
 .textarea {
   background: @white;
   border: 2px solid var(--secondary-color);
-  color: var(--primary-color);
+  color: var(--input-font-color);
   font-family: inherit;
   border-radius: 0;
   padding: @inputPadding;
