--- a/src/components/style/colorSchemes.module.less
+++ b/src/components/style/colorSchemes.module.less
@@ -4,7 +4,7 @@
 .colorSchemeWhite {
   background-color: @white;
   color: @black;
-  --primary-color: @violet;
+  --primary-color: @white;
   --secondary-color: @violet;
   --bg-color: @white;
   --font-color: @black;
@@ -16,6 +16,7 @@
   --button-hover-bg-color: @violet;
   --button-hover-font-color: @white;
   --input-border-color: @violet;
+  --input-font-color: @violet;
 }
 
 .colorSchemeViolet {
@@ -33,6 +34,7 @@
   --button-hover-bg-color: @white;
   --button-hover-font-color: @violet;
   --input-border-color: @black;
+  --input-font-color: @violet;
 }
 
 .colorSchemeAqua {
@@ -50,6 +52,7 @@
   --button-hover-bg-color: @white;
   --button-hover-font-color: @aqua;
   --input-border-color: @black;
+  --input-font-color: @aqua;
 }
 
 .colorSchemeRed {
@@ -67,4 +70,5 @@
   --button-hover-bg-color: @white;
   --button-hover-font-color: @red;
   --input-border-color: @black;
+  --input-font-color: @red;
 }
