--- a/src/components/Forms/Checkbox/style.module.less
+++ b/src/components/Forms/Checkbox/style.module.less
@@ -4,7 +4,7 @@
   width: 2em;
   position: relative;
   flex: 0 0 auto;
-  border: 1px solid var(--font-color);
+  border: 1px solid var(--secondary-color);
   border-radius: 0;
   background-color: transparent;
   cursor: pointer;
@@ -16,8 +16,8 @@
   align-self: flex-start;
 
   &:checked {
-    background: var(--font-color);
-    color: var(--bg-color);
+    background: var(--secondary-color);
+    color: var(--primary-color);
     &:after {
       content: '✓';
       font-size: 1.5em;
