Profile Tile: bigger avatar if full size

--- a/src/components/Profile/ProfileTile/style.module.less
+++ b/src/components/Profile/ProfileTile/style.module.less
@@ -124,6 +124,11 @@
     width: 100px;
     height: 100px;
   }
+
+  @media (max-width: @breakPointL) {
+    width: 130px;
+    height: 130px;
+  }
 }
 
 .info {
