Fixed checkboxes in newsletterCard

--- a/src/components/Profile/ProfileNotifications/style.module.less
+++ b/src/components/Profile/ProfileNotifications/style.module.less
@@ -1,8 +1,9 @@
-@import '../../../components/style/vars.less';
+@import '../../style/vars.less';
+@import '../../style/colorSchemes.module.less';
 
 .newsletterCard {
-  background-color: white;
-  color: @black;
+  .colorSchemeWhite;
+  --secondary-color: @aqua;
   padding: 0.5em 1.5em 0.5em 1.5em;
   border-radius: 15px;
   margin-top: 1em;
