Profile tile color fix

--- a/src/components/Profile/ProfileTile/style.module.less
+++ b/src/components/Profile/ProfileTile/style.module.less
@@ -2,8 +2,8 @@
 
 .tileContainer {
   padding: 3rem 2rem 2rem 0;
-  background: @violet;
-  color: @white;
+  background: var(--secondary-color);
+  color: var(--text-on-secondary-color);
   font-weight: normal;
 }
 
