--- a/src/components/style/vars.less
+++ b/src/components/style/vars.less
@@ -7,6 +7,7 @@
 @grey: #f0f0f0;
 @greyBright: #f5f5f5;
 @greyMedium: #dedede;
+@greyDark: #c2c2c2;
 @white: white;
 @black: black;
 @violetLight: #ae9fff;
@@ -14,6 +15,8 @@
 @violetTransparent: rgba(120, 95, 255, 0.2);
 @whiteTransparent: rgba(255, 255, 255, 0.2);
 @aquaTransparent: rgba(70, 180, 180, 0.2);
+
+@blackTransparent: rgba(0, 0, 0, 0.2);
 
 @DesktopFontSizeXXL: 6.25rem; // HUGE, Use only in special cases
 @DesktopFontSizeXL: 3.375rem; // For big headlines
