Black heading on image

--- a/src/components/Layout/Sections/style.module.less
+++ b/src/components/Layout/Sections/style.module.less
@@ -392,6 +392,10 @@
   min-height: 30vw;
   display: flex;
   align-items: flex-end;
+
+  .headerTitle {
+    --heading-color: @black;
+  }
 }
 
 .spaceBetweenBlogAndCTA {
