--- a/src/components/Maps/style.module.less
+++ b/src/components/Maps/style.module.less
@@ -180,19 +180,18 @@
   background-repeat: no-repeat;
   background-position: center;
   cursor: pointer;
+  top: -25px !important;
 
   &.collect {
-    background-image: url('icon-collect.png');
-    width: 50px;
-    height: 50px;
-    top: -10px !important;
+    background-image: url('marker-collect.png');
+    width: 60px;
+    height: 60px;
   }
 
   &.sign {
-    background-image: url('icon-sign.png');
-    width: 45px;
+    background-image: url('marker-sign.png');
+    width: 60px;
     height: 60px;
-    top: -8px !important;
   }
 }
 
