Added hurray crowd in modal after last step

--- a/src/components/HurrayCrowd/style.module.less
+++ b/src/components/HurrayCrowd/style.module.less
@@ -9,6 +9,10 @@
   transform: translateX(-50%);
   pointer-events: none;
 
+  &.small {
+    width: 35rem;
+  }
+
   &:before {
     content: '';
     padding-top: 50%;
