Add colorscheme to meetup form to fix focus state

--- a/src/components/Forms/Meetup/style.module.less
+++ b/src/components/Forms/Meetup/style.module.less
@@ -1,6 +1,9 @@
 @import '../../style/vars.less';
+@import '../../style/colorSchemes.module.less';
 
 .section {
+  .colorSchemeWhite;
+
   width: 100%;
   padding: 1rem 2rem;
   height: 90%;
