Ability to disable input

--- a/src/components/Forms/TextInput/style.module.less
+++ b/src/components/Forms/TextInput/style.module.less
@@ -66,3 +66,9 @@
   max-width: 100%;
   width: @inputWidth;
 }
+
+.disabled {
+  border-color: @greyDark;
+  background: @greyBright;
+  color: @greyDark;
+}
