--- a/src/components/Layout/Sections/style.module.less
+++ b/src/components/Layout/Sections/style.module.less
@@ -600,7 +600,7 @@
   margin: auto;
   margin-top: 2rem;
   display: grid;
-  grid-template-columns: 25% 25% 25% 25%;
+  grid-template-columns: repeat(6, 1fr);
   grid-template-rows: auto;
 
   @media (max-width: @breakPointL) {
@@ -619,7 +619,7 @@
   @media (min-width: @breakPointL) {
     padding-right: 2.5rem;
     grid-column-start: 1;
-    grid-column-end: 3;
+    grid-column-end: 4;
     margin-bottom: 0;
   }
 }
@@ -629,8 +629,41 @@
   grid-column-end: last-line;
   @media (min-width: @breakPointL) {
     padding-left: 2.5rem;
-    grid-column-start: 3;
+    grid-column-start: 4;
     grid-column-end: last-line;
+  }
+}
+
+.componentLeftThird {
+  grid-column-start: 1;
+  grid-column-end: last-line;
+
+  @media (min-width: @breakPointL) {
+    padding-right: 2.5rem;
+    grid-column-start: 1;
+    grid-column-end: 3;
+    margin-bottom: 0;
+  }
+}
+
+.componentRightThird {
+  grid-column-start: 1;
+  grid-column-end: last-line;
+  @media (min-width: @breakPointL) {
+    padding-left: 2.5rem;
+    grid-column-start: 5;
+    grid-column-end: last-line;
+  }
+}
+
+.componentCenterThird {
+  grid-column-start: 1;
+  grid-column-end: last-line;
+  @media (min-width: @breakPointL) {
+    padding-left: 2.5rem;
+    padding-right: 2.5rem;
+    grid-column-start: 3;
+    grid-column-end: 5;
   }
 }
 
