Fullscreen hero image section

--- a/src/components/Layout/Sections/style.module.less
+++ b/src/components/Layout/Sections/style.module.less
@@ -103,6 +103,15 @@
     }
   }
 
+  &FullscreenHero {
+    padding: 0;
+
+    .sectionBody {
+      max-width: none;
+      min-height: 100vh;
+    }
+  }
+
   &.sectionNewsletter.sectionNewsletter {
     background-size: 25em;
     background-repeat: no-repeat;
