New rose section and a few switches (e.g. in profile) for berlin color scheme

--- a/src/components/Layout/Footer/style.module.less
+++ b/src/components/Layout/Footer/style.module.less
@@ -12,6 +12,11 @@
   @media (max-width: @breakPointS) {
     padding: 3rem;
   }
+
+  &.black {
+    background: @black;
+    color: @white;
+  }
 }
 
 .itemContainer {
