--- a/src/components/Profile/style.module.less
+++ b/src/components/Profile/style.module.less
@@ -98,6 +98,11 @@
   @media (max-width: @breakPointS) {
     grid-column: 1 / span 1;
   }
+
+  // Override color scheme for berlin page
+  &.rose {
+    .colorSchemeRose;
+  }
 }
 
 .backToProfile {
