--- a/src/components/Layout/Sections/style.module.less
+++ b/src/components/Layout/Sections/style.module.less
@@ -27,6 +27,11 @@
     background-image: url('./backgrounds/newsletter_red.svg');
   }
 
+  // Berlin site needs to override the normal color scheme white
+  &.sectionRoseOnWhite {
+    .colorSchemeRoseOnWhite;
+  }
+
   // Use mixins for other section color schemes
   // Color schemes are in base.less
   &.sectionViolet {
@@ -39,6 +44,10 @@
 
   &.sectionRed {
     .colorSchemeRed;
+  }
+
+  &.sectionRose {
+    .colorSchemeRose;
   }
   // Illustrations need a Redo
 
