--- a/src/components/style/colorSchemes.module.less
+++ b/src/components/style/colorSchemes.module.less
@@ -19,6 +19,23 @@
   --input-font-color: @violet;
 }
 
+.colorSchemeRoseOnWhite {
+  background-color: @white;
+  color: @black;
+  --primary-color: @white;
+  --secondary-color: @rose;
+  --bg-color: @white;
+  --font-color: @black;
+  --heading-color: @black;
+  --text-on-secondary-color: @black;
+  --button-font-color: @black;
+  --button-bg-color: @white;
+  --button-hover-bg-color: @rose;
+  --button-hover-font-color: @black;
+  --input-border-color: @black;
+  --input-font-color: @black;
+}
+
 .colorSchemeViolet {
   background-color: @violet;
   color: @white;
@@ -71,4 +88,21 @@
   --button-hover-font-color: @red;
   --input-border-color: @black;
   --input-font-color: @red;
+}
+
+.colorSchemeRose {
+  background-color: @rose;
+  color: @black;
+  --primary-color: @rose;
+  --secondary-color: @white;
+  --bg-color: @rose;
+  --font-color: @black;
+  --heading-color: @black;
+  --text-on-secondary-color: @black;
+  --button-font-color: @black;
+  --button-bg-color: @white;
+  --button-hover-bg-color: @black;
+  --button-hover-font-color: @rose;
+  --input-border-color: @black;
+  --input-font-color: @black;
 }
