--- a/src/components/style/vars.less
+++ b/src/components/style/vars.less
@@ -1,7 +1,7 @@
 @red: #ff4664;
 @aqua: #46b4b4;
 @blueDark: #3423f6;
-@rose: #e5b5c8;
+@rose: #f9ccd4;
 @violet: #7d69f6;
 @yellow: #fef377;
 @grey: #f0f0f0;
