--- a/src/components/style/vars.less
+++ b/src/components/style/vars.less
@@ -52,6 +52,7 @@
 @contentWidth: 45rem;
 @contentWidthL: 70rem;
 
+@breakPointXXL: 2000px;
 @breakPointXL: 1200px;
 @breakPointL: 1000px;
 @breakPointM: 800px;
