Black font on button hover

--- a/src/components/style/colorSchemes.module.less
+++ b/src/components/style/colorSchemes.module.less
@@ -102,7 +102,7 @@
   --button-font-color: @black;
   --button-bg-color: @white;
   --button-hover-bg-color: @black;
-  --button-hover-font-color: @rose;
+  --button-hover-font-color: @white;
   --input-border-color: @black;
   --input-font-color: @black;
 }
