--- a/src/components/style/colorSchemes.module.less
+++ b/src/components/style/colorSchemes.module.less
@@ -15,6 +15,8 @@
   --button-bg-color: @violetTransparent;
   --button-hover-bg-color: @violet;
   --button-hover-font-color: @white;
+  --button-focus-bg-color: @violetDark;
+  --button-focus-font-color: @white;
   --input-border-color: @violet;
   --input-font-color: @violet;
 }
@@ -32,6 +34,8 @@
   --button-bg-color: @white;
   --button-hover-bg-color: @rose;
   --button-hover-font-color: @black;
+  --button-focus-bg-color: @roseDark;
+  --button-focus-font-color: @black;
   --input-border-color: @black;
   --input-font-color: @black;
 }
@@ -50,6 +54,8 @@
   --button-bg-color: @whiteTransparent;
   --button-hover-bg-color: @white;
   --button-hover-font-color: @violet;
+  --button-focus-bg-color: @violetDark;
+  --button-focus-font-color: @white;
   --input-border-color: @black;
   --input-font-color: @violet;
 }
@@ -68,6 +74,8 @@
   --button-bg-color: @whiteTransparent;
   --button-hover-bg-color: @white;
   --button-hover-font-color: @aqua;
+  --button-focus-bg-color: @aquaDark;
+  --button-focus-font-color: @white;
   --input-border-color: @black;
   --input-font-color: @aqua;
 }
@@ -86,6 +94,8 @@
   --button-bg-color: @whiteTransparent;
   --button-hover-bg-color: @white;
   --button-hover-font-color: @red;
+  --button-focus-bg-color: @redDark;
+  --button-focus-font-color: @white;
   --input-border-color: @black;
   --input-font-color: @red;
 }
@@ -103,6 +113,8 @@
   --button-bg-color: @white;
   --button-hover-bg-color: @black;
   --button-hover-font-color: @white;
+  --button-focus-bg-color: @black;
+  --button-focus-font-color: @rose;
   --input-border-color: @black;
   --input-font-color: @black;
 }
