--- a/src/components/style/vars.less
+++ b/src/components/style/vars.less
@@ -1,8 +1,12 @@
 @red: #ff4664;
+@redDark: darken(@red, 10%);
 @aqua: #46b4b4;
+@aquaDark: darken(@aqua, 10%);
 @blueDark: #3423f6;
 @rose: #f9ccd4;
+@roseDark: darken(@rose, 10%);
 @violet: #7d69f6;
+@violetDark: darken(@violet, 10%);
 @yellow: #fef377;
 @grey: #f0f0f0;
 @greyBright: #f5f5f5;
