Licenses of fonts

--- a/src/components/style/obviouslyWebfont.less
+++ b/src/components/style/obviouslyWebfont.less
@@ -1,3 +1,8 @@
+/**
+ * @license
+ * https://ohnotype.co/info/licenses/web
+*/
+
 @font-face {
   font-family: 'Obviously';
   font-weight: normal bold;
