Set fixed viewport height

--- a/src/components/Layout/Sections/FullscreenHero/style.module.less
+++ b/src/components/Layout/Sections/FullscreenHero/style.module.less
@@ -39,3 +39,11 @@
   transition: transform 10s !important;
   transform: scale(1.05) !important;
 }
+
+.image {
+  height: 91vh;
+
+  @media (max-width: @breakPointM) {
+    height: 50vh;
+  }
+}
