Fullscreen hero image section (#396)
* Fullscreen hero image section

* Fix hero image for big screens

* Fixed styling for big screens and mobile, zoom on load

* Longer delay for zoom

* Set fixed viewport height

Co-authored-by: Tatiana Schär <tatiana.schaer@hotmail.com>

--- a/src/components/Layout/Sections/style.module.less
+++ b/src/components/Layout/Sections/style.module.less
@@ -103,6 +103,14 @@
     }
   }
 
+  &FullscreenHero {
+    padding: 0;
+
+    .sectionBody {
+      max-width: none;
+    }
+  }
+
   &.sectionNewsletter.sectionNewsletter {
     background-size: 25em;
     background-repeat: no-repeat;
