--- a/src/components/style/baseBerlin.less
+++ b/src/components/style/baseBerlin.less
@@ -2,16 +2,16 @@
 @import 'maruWebfont';
 @import 'obviouslyWebfont';
 
-body {
+.fontBerlin {
   font-family: 'Maru', Tahoma, Arial, Helvetica, sans-serif !important;
   font-weight: normal !important;
-}
 
-h1,
-h2,
-h3,
-h4,
-h5 {
-  font-family: 'Obviously', Tahoma, Arial, Helvetica, sans-serif !important;
-  font-weight: normal !important;
+  h1,
+  h2,
+  h3,
+  h4,
+  h5 {
+    font-family: 'Obviously', Tahoma, Arial, Helvetica, sans-serif !important;
+    font-weight: normal !important;
+  }
 }
