Changed focus style for black on rose

--- a/src/components/style/colorSchemes.module.less
+++ b/src/components/style/colorSchemes.module.less
@@ -113,8 +113,8 @@
   --button-bg-color: @white;
   --button-hover-bg-color: @black;
   --button-hover-font-color: @white;
-  --button-focus-bg-color: @black;
-  --button-focus-font-color: @rose;
+  --button-focus-bg-color: lighten(@black, 20%);
+  --button-focus-font-color: @white;
   --input-border-color: @black;
   --input-font-color: @black;
 }
