--- a/src/components/Modal/style.module.less
+++ b/src/components/Modal/style.module.less
@@ -7,6 +7,15 @@
 .modalContent {
   padding-top: 4rem;
   height: 100%;
+  overflow: auto;
+  /* Hide scrollbar */
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
+
+  /* Hide scrollbar for Chrome, Safari and Opera */
+  &::-webkit-scrollbar {
+    display: none;
+  }
 }
 
 .modalStyle {
@@ -16,7 +25,7 @@
   height: 90vh;
   z-index: 1040;
   background-color: @white;
-  border: 1px solid @violet;
+  border: 1px solid @black;
   border-radius: 25px;
   margin: 0 auto;
   left: 50%;
