--- a/src/pages/login/style.module.less
+++ b/src/pages/login/style.module.less
@@ -1,3 +1,5 @@
+@import '../../components/style/vars.less';
+
 .section {
   padding-top: 3rem !important;
   min-height: 35rem;
@@ -10,6 +12,10 @@
 
 .content {
   width: 65%;
+
+  @media (max-width: @breakPointM) {
+    width: 100%;
+  }
 }
 
 .input {
