Added expedition logo to Berlin footer

--- a/src/components/Layout/Footer/style.module.less
+++ b/src/components/Layout/Footer/style.module.less
@@ -71,3 +71,21 @@
 .partnerLogos {
   margin: 1rem 0 0;
 }
+
+.berlinInfos {
+  margin: 0 auto 1rem;
+  width: 13rem;
+  text-align: left;
+}
+
+.logo {
+  display: block;
+  width: 100%;
+  margin: 1rem 0;
+  max-width: 13rem;
+}
+
+.expeditionsLink {
+  display: block;
+  margin-bottom: 1rem;
+}
