Login: smaller padding on mobile

--- a/src/pages/login/style.module.less
+++ b/src/pages/login/style.module.less
@@ -3,6 +3,10 @@
 .section {
   padding-top: 3rem !important;
   min-height: 35rem;
+
+  @media (max-width: @breakPointS) {
+    padding-top: 1rem !important;
+  }
 }
 
 .wrapper {
