--- a/src/components/Forms/SelfScan/style.module.less
+++ b/src/components/Forms/SelfScan/style.module.less
@@ -16,6 +16,14 @@
   }
 }
 
+.idHint {
+  font-size: @DesktopFontSizeS;
+
+  @media (max-width: @breakPointS) {
+    font-size: @DesktopFontSizeXS;
+  }
+}
+
 .formSection {
   margin-bottom: 2rem;
 }
