Move jump to anchor up by header height

--- a/src/components/Maps/style.module.less
+++ b/src/components/Maps/style.module.less
@@ -336,3 +336,12 @@
     height: 2.5rem;
   }
 }
+
+.jumpToAnchorWrapper {
+  position: relative;
+}
+
+.jumpToAnchor {
+  position: absolute;
+  top: calc(-@headerHeight - 2rem);
+}
