--- a/src/components/Maps/style.module.less
+++ b/src/components/Maps/style.module.less
@@ -181,17 +181,19 @@
   background-position: center;
   cursor: pointer;
   top: -25px !important;
+  width: 60px;
+  height: 60px;
 
   &.collect {
     background-image: url('marker-collect.png');
-    width: 60px;
-    height: 60px;
   }
 
   &.sign {
     background-image: url('marker-sign.png');
-    width: 60px;
-    height: 60px;
+  }
+
+  &.storage {
+    background-image: url('marker-storage.png');
   }
 }
 
@@ -258,11 +260,7 @@
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  height: 4rem;
-
-  @media (max-width: @breakPointL) {
-    height: 7rem;
-  }
+  height: 7rem;
 
   @media (max-width: @breakPointS) {
     height: auto;
