Deactivated received signature stat

--- a/src/components/SignatureStats/style.module.less
+++ b/src/components/SignatureStats/style.module.less
@@ -6,9 +6,10 @@
   min-width: 50%;
   margin-bottom: 4rem;
 
-  &:last-of-type {
-    margin-bottom: 0rem;
-  }
+  // Deactivated second stat
+  // &:last-of-type {
+  //   margin-bottom: 0rem;
+  // }
 
   @media (max-width: @breakPointM) {
     margin-bottom: 3rem;
