Changed collection map icons for Berlin

--- a/src/components/Maps/style.module.less
+++ b/src/components/Maps/style.module.less
@@ -195,6 +195,18 @@
   &.storage {
     background-image: url('marker-storage.png');
   }
+
+  &.collectBerlin {
+    background-image: url('marker-collect-berlin.png');
+  }
+
+  &.signBerlin {
+    background-image: url('marker-sign-berlin.png');
+  }
+
+  &.storageBerlin {
+    background-image: url('marker-storage-berlin.png');
+  }
 }
 
 .eventContainer {
