Gave the legend some spacing

--- a/src/components/Maps/style.module.less
+++ b/src/components/Maps/style.module.less
@@ -322,7 +322,8 @@
   }
 }
 
-.legend {
+.legend,
+.legendBerlin {
   display: flex;
   justify-content: end;
   flex-wrap: wrap;
@@ -335,6 +336,16 @@
     position: relative;
     top: 0.8rem;
     height: 2.5rem;
+  }
+}
+
+.legendBerlin {
+  > div {
+    margin-left: 1rem;
+  }
+
+  img {
+    margin-right: 0.4rem;
   }
 }
 
