--- a/src/components/style/baseBerlin.less
+++ b/src/components/style/baseBerlin.less
@@ -13,5 +13,10 @@
   h5 {
     font-family: 'Obviously', Tahoma, Arial, Helvetica, sans-serif !important;
     font-weight: normal !important;
+    line-height: 1 !important;
+  }
+
+  p {
+    line-height: 1.25;
   }
 }
