Made icons a little smaller

--- a/src/components/Maps/style.module.less
+++ b/src/components/Maps/style.module.less
@@ -181,8 +181,8 @@
   background-position: center;
   cursor: pointer;
   top: -25px !important;
-  width: 60px;
-  height: 60px;
+  width: 3rem;
+  height: 3rem;
 
   &.collect {
     background-image: url('marker-collect.png');
