--- a/src/components/Layout/Sections/style.module.less
+++ b/src/components/Layout/Sections/style.module.less
@@ -652,13 +652,19 @@
   }
 }
 
+.componentLeftThird,
+.componentRightThird,
+.componentCenterThird {
+  align-self: center;
+  padding: 2rem 0;
+}
+
 .componentLeftThird {
   grid-column-start: 1;
   grid-column-end: last-line;
-  align-self: center;
 
   @media (min-width: @breakPointL) {
-    padding-right: 2.5rem;
+    padding: 0 2.5rem 0 0;
     grid-column-start: 1;
     grid-column-end: 3;
     margin-bottom: 0;
@@ -668,10 +674,9 @@
 .componentRightThird {
   grid-column-start: 1;
   grid-column-end: last-line;
-  align-self: center;
 
   @media (min-width: @breakPointL) {
-    padding-left: 2.5rem;
+    padding: 0 0 0 2.5rem;
     grid-column-start: 5;
     grid-column-end: last-line;
   }
@@ -680,11 +685,9 @@
 .componentCenterThird {
   grid-column-start: 1;
   grid-column-end: last-line;
-  align-self: center;
 
   @media (min-width: @breakPointL) {
-    padding-left: 2.5rem;
-    padding-right: 2.5rem;
+    padding: 0 2.5rem;
     grid-column-start: 3;
     grid-column-end: 5;
   }
