--- a/src/components/Forms/Checkbox/style.module.less
+++ b/src/components/Forms/Checkbox/style.module.less
@@ -17,7 +17,7 @@
 
   &:checked {
     background: var(--secondary-color);
-    color: var(--primary-color);
+    color: var(--text-on-secondary-color);
     &:after {
       content: '✓';
       font-size: 1.5em;
